fixed alignment of dots in page controller

--- a/client/src/components/PageControls/PageControls.css
+++ b/client/src/components/PageControls/PageControls.css
@@ -37,3 +37,7 @@
 .page-number-btn-selected:hover {
     background-color: #333333;
 }
+
+.page-controller-spread {
+    margin-top: auto;
+}
